# grabber

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: claude-md-lint.yml
grabber/: chrome.py  cli.py  download.py
grabber/providers/: __init__.py  base.py  docsend.py
grabber/scripts/: docsend_console.js
